# mcp-deep-research

./: Cargo.toml  LICENSE  README.md
src/: extract.rs  lib.rs  search.rs  synthesize.rs
